Another progress, but  not fully done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="" />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>frontend</title>
@@ -21,192 +21,230 @@
     </header>
     <div id="home">
       <main>
-        <div class="landing-side-1">
-          <div class="AI-label">
-            <span
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-sparkles w-8 h-8 text-purple-600"
-                data-fg-ctt631="1.65:2.3287:/components/LandingPage.tsx:60:21:2830:48:e:Sparkles::::::DD2N"
-              >
-                <path
-                  d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
-                ></path>
-                <path d="M20 3v4"></path>
-                <path d="M22 5h-4"></path>
-                <path d="M4 17v2"></path>
-                <path d="M5 18H3"></path></svg></span
-            >AI-Powered Learning Assistant
-          </div>
-          <div class="landing-text-1">
-            Turn Lectures into Exam-Ready Questions with AI
-          </div>
-          <div class="landing-text-2">
-            Upload your lecture audio or paste transcripts, and let our advanced
-            AI generate comprehensive exam questions tailored to your study
-            materials. Study smarter, not harder.
-          </div>
-          <div class="landing-btns">
-            <button class="landing-btn-1">
-              <span>Generate Questions</span>
+        <div class="hero-section">
+          <div class="landing-side-1">
+            <div class="AI-label">
               <span
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
                   viewBox="0 0 24 24"
                   fill="none"
                   stroke="currentColor"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  class="lucide lucide-arrow-right w-5 h-5"
-                  data-fg-ctt615="1.65:2.3287:/components/LandingPage.tsx:33:17:1523:34:e:ArrowRight::::::s5N"
+                  class="lucide lucide-sparkles w-8 h-8 text-purple-600"
+                  data-fg-ctt631="1.65:2.3287:/components/LandingPage.tsx:60:21:2830:48:e:Sparkles::::::DD2N"
                 >
-                  <path d="M5 12h14"></path>
-                  <path d="m12 5 7 7-7 7"></path></svg
-              ></span>
-            </button>
-            <button class="landing-btn-2">
-              <span
-                ><svg
+                  <path
+                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
+                  ></path>
+                  <path d="M20 3v4"></path>
+                  <path d="M22 5h-4"></path>
+                  <path d="M4 17v2"></path>
+                  <path d="M5 18H3"></path></svg></span
+              >AI-Powered Learning Assistant
+            </div>
+            <div class="landing-text-1">
+              Turn Lectures into Exam-Ready Questions with AI
+            </div>
+            <div class="landing-text-2">
+              Upload your lecture audio or paste transcripts, and let our
+              advanced AI generate comprehensive exam questions tailored to your
+              study materials. Study smarter, not harder.
+            </div>
+            <div class="landing-btns">
+              <button class="landing-btn-1">
+                <span>Generate Questions</span>
+                <span
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-arrow-right w-5 h-5"
+                    data-fg-ctt615="1.65:2.3287:/components/LandingPage.tsx:33:17:1523:34:e:ArrowRight::::::s5N"
+                  >
+                    <path d="M5 12h14"></path>
+                    <path d="m12 5 7 7-7 7"></path></svg
+                ></span>
+              </button>
+              <button class="landing-btn-2">
+                <span
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-mic w-5 h-5"
+                    data-fg-ctt617="1.65:2.3287:/components/LandingPage.tsx:40:17:1881:27:e:Mic::::::ELnR"
+                  >
+                    <path
+                      d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
+                    ></path>
+                    <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
+                    <line x1="12" x2="12" y1="19" y2="22"></line></svg></span
+                >Upload Lecture Audio
+              </button>
+            </div>
+          </div>
+
+          <div class="landing-side-2">
+            <div class="top-abs">Fast & Accurate</div>
+            <div class="workflow-imgs">
+              <div class="mic-img-container">
+                <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
                   viewBox="0 0 24 24"
                   fill="none"
                   stroke="currentColor"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  class="lucide lucide-mic w-5 h-5"
-                  data-fg-ctt617="1.65:2.3287:/components/LandingPage.tsx:40:17:1881:27:e:Mic::::::ELnR"
+                  class="lucide lucide-mic"
+                  data-fg-ctt625="1.65:2.3287:/components/LandingPage.tsx:52:21:2387:43:e:Mic::::::ELnR"
                 >
                   <path
                     d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
                   ></path>
                   <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
-                  <line x1="12" x2="12" y1="19" y2="22"></line></svg></span
-              >Upload Lecture Audio
-            </button>
+                  <line x1="12" x2="12" y1="19" y2="22"></line>
+                </svg>
+              </div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-arrow-right"
+                data-fg-ctt626="1.65:2.3287:/components/LandingPage.tsx:54:19:2474:48:e:ArrowRight::::::s5N"
+              >
+                <path d="M5 12h14"></path>
+                <path d="m12 5 7 7-7 7"></path>
+              </svg>
+              <div class="file-img-container">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-file-text"
+                  data-fg-ctt628="1.65:2.3287:/components/LandingPage.tsx:56:21:2606:46:e:FileText::::::B1i5"
+                >
+                  <path
+                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
+                  ></path>
+                  <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
+                  <path d="M10 9H8"></path>
+                  <path d="M16 13H8"></path>
+                  <path d="M16 17H8"></path>
+                </svg>
+              </div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-arrow-right"
+                data-fg-ctt626="1.65:2.3287:/components/LandingPage.tsx:54:19:2474:48:e:ArrowRight::::::s5N"
+              >
+                <path d="M5 12h14"></path>
+                <path d="m12 5 7 7-7 7"></path>
+              </svg>
+              <div class="sparkles-img-container">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-sparkles"
+                  data-fg-ctt631="1.65:2.3287:/components/LandingPage.tsx:60:21:2830:48:e:Sparkles::::::DD2N"
+                >
+                  <path
+                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
+                  ></path>
+                  <path d="M20 3v4"></path>
+                  <path d="M22 5h-4"></path>
+                  <path d="M4 17v2"></path>
+                  <path d="M5 18H3"></path>
+                </svg>
+              </div>
+            </div>
+            <div class="bars">
+              <div class="bar-cont-1">
+                <div class="bar-1"></div>
+                <div class="bar-2"></div>
+              </div>
+              <div class="bar-cont-2">
+                <div class="bar-1"></div>
+                <div class="bar-2"></div>
+              </div>
+              <div class="bar-cont-3 bar-cont-active">
+                <div class="bar-1"></div>
+                <div class="bar-2"></div>
+              </div>
+            </div>
+            <div class="lower-abs">Study Efficiently</div>
           </div>
         </div>
 
-        <div class="landing-side-2">
-          <div class="top-abs">Fast & Accurate</div>
-          <div class="workflow-imgs">
-            <div class="mic-img-container">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-mic"
-                data-fg-ctt625="1.65:2.3287:/components/LandingPage.tsx:52:21:2387:43:e:Mic::::::ELnR"
-              >
-                <path
-                  d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
-                ></path>
-                <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
-                <line x1="12" x2="12" y1="19" y2="22"></line>
-              </svg>
+        <div class="home-page-section-divider"></div>
+
+        <article>
+          <h2>Why Students Choose ExamSense AI</h2>
+          <p>Intelligent question generation designed for academic success</p>
+          <div class="article-classification">
+            <div>
+              <div class="sparkle-container">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-sparkles w-6 h-6 text-indigo-600"
+                  data-fg-ctt657="1.65:2.3287:/components/LandingPage.tsx:102:15:4868:48:e:Sparkles::::::DD2N"
+                >
+                  <path
+                    d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
+                  ></path>
+                  <path d="M20 3v4"></path>
+                  <path d="M22 5h-4"></path>
+                  <path d="M4 17v2"></path>
+                  <path d="M5 18H3"></path>
+                </svg>
+              </div>
             </div>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-arrow-right"
-              data-fg-ctt626="1.65:2.3287:/components/LandingPage.tsx:54:19:2474:48:e:ArrowRight::::::s5N"
-            >
-              <path d="M5 12h14"></path>
-              <path d="m12 5 7 7-7 7"></path>
-            </svg>
-            <div class="file-img-container">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-file-text"
-                data-fg-ctt628="1.65:2.3287:/components/LandingPage.tsx:56:21:2606:46:e:FileText::::::B1i5"
-              >
-                <path
-                  d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
-                ></path>
-                <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
-                <path d="M10 9H8"></path>
-                <path d="M16 13H8"></path>
-                <path d="M16 17H8"></path>
-              </svg>
-            </div>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="lucide lucide-arrow-right"
-              data-fg-ctt626="1.65:2.3287:/components/LandingPage.tsx:54:19:2474:48:e:ArrowRight::::::s5N"
-            >
-              <path d="M5 12h14"></path>
-              <path d="m12 5 7 7-7 7"></path>
-            </svg>
-            <div class="sparkles-img-container">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="lucide lucide-sparkles"
-                data-fg-ctt631="1.65:2.3287:/components/LandingPage.tsx:60:21:2830:48:e:Sparkles::::::DD2N"
-              >
-                <path
-                  d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
-                ></path>
-                <path d="M20 3v4"></path>
-                <path d="M22 5h-4"></path>
-                <path d="M4 17v2"></path>
-                <path d="M5 18H3"></path>
-              </svg>
-            </div>
+            <div></div>
+            <div></div>
           </div>
-          <div class="bars">
-            <div class="bar-cont-1">
-              <div class="bar-1"></div>
-              <div class="bar-2"></div>
-            </div>
-            <div class="bar-cont-2">
-              <div class="bar-1"></div>
-              <div class="bar-2"></div>
-            </div>
-            <div class="bar-cont-3 bar-cont-active">
-              <div class="bar-1"></div>
-              <div class="bar-2"></div>
-            </div>
-          </div>
-          <div class="lower-abs">Study Efficiently</div>
-        </div>
+        </article>
       </main>
     </div>
     <div id="generate"></div>
