--- a/index.html
+++ b/index.html
@@ -333,17 +333,131 @@
     </div>
     <div id="generate">
       <main>
-        <div class="
-        ">
-          <h2>Generate Exam Questions</h2>
+        <div class="content-container">
+          <h1>Generate Exam Questions</h1>
           <p>
             Paste your lecture transcript or study materials below, and our AI
             will generate relevant exam questions.
           </p>
-          <div>
-            <div></div>
-            <div></div>
-            <div></div>
+          <div class="inputs-box-container">
+            <div class="input-box input-box-1">
+              <div class="box-texts-n-img">
+                <div class="input-img-cont-1">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-file-text"
+                    data-fg-ed2d11="2.7:2.6155:/components/GenerateQuestionsPage.tsx:39:15:1426:48:e:FileText::::::B1i5"
+                  >
+                    <path
+                      d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
+                    ></path>
+                    <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
+                    <path d="M10 9H8"></path>
+                    <path d="M16 13H8"></path>
+                    <path d="M16 17H8"></path>
+                  </svg>
+                </div>
+                <div>
+                  <h2>Lecture Transcript</h2>
+                  <p>Paste your lecture transcript or notes</p>
+                </div>
+              </div>
+              <textarea
+                name=""
+                id=""
+                placeholder="Example: Today we're discussing cellular respiration. The process begins with glycolysis in the cytoplasm, where glucose is broken down into pyruvate..."
+              ></textarea>
+            </div>
+
+            <div class="input-box input-box-2">
+              <div class="box-texts-n-img">
+                <div class="input-img-cont-2">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-file-text"
+                    data-fg-ed2d11="2.7:2.6155:/components/GenerateQuestionsPage.tsx:39:15:1426:48:e:FileText::::::B1i5"
+                  >
+                    <path
+                      d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
+                    ></path>
+                    <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
+                    <path d="M10 9H8"></path>
+                    <path d="M16 13H8"></path>
+                    <path d="M16 17H8"></path>
+                  </svg>
+                </div>
+                <div>
+                  <h2>Additional Study Material</h2>
+                  <p>Optional: Add textbook excerpts or extra notes</p>
+                </div>
+              </div>
+              <textarea
+                name=""
+                id=""
+                placeholder="Paste any additional study materials here (optional)..."
+              ></textarea>
+            </div>
+
+            <div class="input-box input-box-3">
+              <div class="box-texts-n-img">
+                <div class="input-img-cont-3">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="lucide lucide-settings w-5 h-5 text-purple-600"
+                    data-fg-ed2d33="2.7:2.6155:/components/GenerateQuestionsPage.tsx:79:15:3498:48:e:Settings::::::D4nh"
+                  >
+                    <path
+                      d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
+                    ></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>
+                </div>
+                <div>
+                  <h2>Question Settings</h2>
+                  <p>Customize your exam questions</p>
+                </div>
+              </div>
+              <div class="selection-type-sect">
+                <div>
+                  <label for="no-of-question">Number of Questions </label>
+                  <select name="no-of-question" id="no-of-question">
+                    <option value="">3 questions</option>
+                    <option value="">5 questions</option>
+                    <option value="">10 questions</option>
+                    <option value="">15 questions</option>
+                    <option value="">20 questions</option>
+                  </select>
+                </div>
+
+                <div>
+                  <label for="no-of-question">Question Format</label>
+                  <select name="no-of-question" id="no-of-question">
+                    <option value="">Multiple Choice (MCQ)</option>
+                    <option value="">Easy Questions</option>
+                    <option value="">Short Answers</option>
+                    <option value="">Mixed Format</option>
+                  </select>
+                </div>
+              </div>
+            </div>
           </div>
           <button>Generate Questions with AI</button>
         </div>
